Remove App Name from Travis YAML

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ deploy:
    organization: Spring-Boot-Learning
    space: Party
    #manifest: manifest-staging.yml       # (optional)  Defaults to manifest.yml.
-   app_name: Party Service Application
+   #app_name: Party Service Application  # (optional)  Will be taken from manifest.yml.
