--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,15 @@ cache:
   
 deploy:
    provider: cloudfoundry
-   #username: saurabh.singh5788@gmail.com   # Provided as Environment Variable
-   #password: XXXXXXXXXXXX                  # Provided as Environment Variable
-   #api: https://api.run.pivotal.io         # Provided as Environment Variable
-   #organization: Spring-Boot-Learning      # Provided as Environment Variable
-   #space: Party                            # Provided as Environment Variable
-   #manifest: manifest-staging.yml          # (optional)  Defaults to manifest.yml.
-   #app_name: Party Service Application     # (optional)  Will be taken from manifest.yml.
+   username: $CF_USERNAME
+   #username: saurabh.singh5788@gmail.com
+   password: $CF_PASSWORD
+   #password: Pivotal@5788
+   api: $CF_API
+   #api: https://api.run.pivotal.io
+   organization: $CF_ORGANIZATION
+   #organization: Spring-Boot-Learning
+   space: $CF_SPACE
+   #space: Party
+   #manifest: manifest-staging.yml       # (optional)  Defaults to manifest.yml.
+   #app_name: Party Service Application  # (optional)  Will be taken from manifest.yml.
