--- a/manifest.yml
+++ b/manifest.yml
@@ -8,7 +8,7 @@ applications:
   host: party-service-app
   domain: cfapps.io
   timeout: 60
-  memory: 1G
+  memory: 768M
   instances: 2
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{jre: { version: 1.8.0_+ }}'
