--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,33 @@
-logging:
-  level:
-    com:      
-      learning:
-        springboot: INFO
-    org:
-      springframework: ERROR
+#Default Profile
+logging.level:
+  org.hibernate: INFO  
+  org.springframework: ERROR
+  org.springframework.boot.context.embedded: INFO
+  com.learning.springboot: INFO
+#Setting Default Profile
+spring.profiles.active: local  
+---
+#Local Profile
+server.port: 8080
+# Enabling Random Vacant Port assignment
+# server.port: ${PORT:0}
+management:
+  #port: 8080
+  security:
+    enabled: false  
+spring:
+  profiles: local
+  application.name: party-service-app-dev
+  jpa:
+    generate-ddl: true
+    show-sql: true    
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        #ddl-auto: create
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost/party-service-app-db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+    username: root
+    password:
+    platform: mysql
