--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
   profiles: local
   application.name: party-service-app-dev
   jpa:
-    generate-ddl: true
+    generate-ddl: false
     show-sql: true    
     properties:
       hibernate:
