--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ logging.level:
   org.springframework.boot.context.embedded: INFO
   com.learning.springboot: INFO
 #Setting Default Profile
-spring.profiles.active: local 
+#spring.profiles.active: local 
 ---
 #Local Profile
 server.port: 8080
