--- a/manifest.yml
+++ b/manifest.yml
@@ -12,4 +12,4 @@ applications:
   instances: 2
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{jre: { version: 1.8.0_+ }}'
-    SPRING_PROFILES_ACTIVE: cf
+    SPRING_PROFILES_ACTIVE: pcf
