--- a/manifest.yml
+++ b/manifest.yml
@@ -13,3 +13,4 @@ applications:
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{jre: { version: 1.8.0_+ }}'
     SPRING_PROFILES_ACTIVE: pcf
+    JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
