--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,9 +69,9 @@ spring:
         #ddl-auto: create
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: ${vcap.services.cleardb.credentials.jdbcUrl}
-    username: ${vcap.services.cleardb.credentials.username}
-    password: ${vcap.services.cleardb.credentials.password}
+    url: ${vcap.services.party-service-app-mysql-db.credentials.jdbcUrl}
+    username: ${vcap.services.party-service-app-mysql-db.credentials.username}
+    password: ${vcap.services.party-service-app-mysql-db.credentials.password}
     platform: mysql 
 #Enabling Random Vacant Port assignment
 server.port: ${PORT:0}
