--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ management:
 spring:
   profiles: unit-test
   application:
-    name: party-service-dev
+    name: party-service-app
   # To See H2 Console in Browser:
   # http://localhost:<<Port>>/h2-console
   # Enabling H2 Console
