--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ management:
 spring:
   profiles: unit-test
   application:
-    name: party-service-app
+    name: party-service-dev
   # To See H2 Console in Browser:
   # http://localhost:<<Port>>/h2-console
   # Enabling H2 Console
@@ -67,6 +67,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         #ddl-auto: create
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost/party-service-app-db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+    username: root
+    password:
+    platform: mysql
 #Enabling Random Vacant Port assignment
 server.port: ${PORT:0}
 management:
