--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ management:
 spring:
   profiles: unit-test
   application:
-    name: party-service-dev
+    name: party-service-app
   # To See H2 Console in Browser:
   # http://localhost:<<Port>>/h2-console
   # Enabling H2 Console
@@ -69,9 +69,9 @@ spring:
         #ddl-auto: create
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/party-service-app-db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-    username: root
-    password:
+    url: ${vcap.services.party-service-app-mysql-db.credentials.jdbcUrl}
+    username: ${vcap.services.party-service-app-mysql-db.credentials.username}
+    password: ${vcap.services.party-service-app-mysql-db.credentials.password}
     platform: mysql
 #Enabling Random Vacant Port assignment
 server.port: ${PORT:0}
