--- a/manifest.yml
+++ b/manifest.yml
@@ -13,8 +13,8 @@ applications:
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{jre: { version: 1.8.0_+ }}'
     SPRING_PROFILES_ACTIVE: pcf
-    #JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
   services:
    - party-service-app-mysql-db
    - party-service-app-logs
-  
+env:   
+  JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
