Revert PCF DB to Auto Configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ management:
 spring:
   profiles: unit-test
   application:
-    name: party-service-app
+    name: party-service-dev
   # To See H2 Console in Browser:
   # http://localhost:<<Port>>/h2-console
   # Enabling H2 Console
@@ -61,7 +61,7 @@ spring:
   profiles: pcf
   application.name: party-service-app
   jpa:
-    generate-ddl: true
+    generate-ddl: false
     show-sql: true    
     properties:
       hibernate:
@@ -69,9 +69,9 @@ spring:
         #ddl-auto: create
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/party-service-app-db
-    username: xyz
-    password: xyz
+    url: jdbc:mysql://localhost/party-service-app-db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+    username: root
+    password:
     platform: mysql
 #Enabling Random Vacant Port assignment
 server.port: ${PORT:0}
