--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,21 +58,8 @@ server.port: 8080
 ---
 #PCF Profile
 spring:
-  profiles: pcf
+  profiles: cloudfoundry
   application.name: party-service-app
-  jpa:
-    generate-ddl: true
-    show-sql: true    
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        #ddl-auto: create
-  datasource:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/party-service-app-db?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-    username: root
-    password:
-    platform: mysql
 #Enabling Random Vacant Port assignment
 server.port: ${PORT:0}
 management:
